<resources>
    <string name="app_name">木木不哭</string>

    <!-- 错误 -->
    <string name="unknown_error">未知错误</string>
    <string name="auth_failure_error">HTTP身份验证错误</string>
    <string name="network_error">服务器通信失败</string>
    <string name="no_connection_error">网络未连接</string>
    <string name="parse_error">数据错误</string>
    <string name="server_error">服务器处理错误</string>
    <string name="timeout_error">连接服务器超时</string>
    <string name="no_data_error">没有数据返回</string>

    <string name="loading">数据加载中...</string>
    <string name="loading_more_data">更多数据加载中...</string>
    <string name="load_more_data">点击加载更多数据</string>
    <string name="back_to_exit">再按一次返回键退出木木不哭</string>
    <string name="tip">提示</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="click_to_refresh">点击页面刷新</string>

    <!-- 广告 -->
    <string name="click_to_skip">点击跳过 %1$ds</string>

    <!-- 权限申请 -->
    <string name="permission_cancel">取消</string>
    <string name="permission_setting">设置</string>
    <string name="permission_title_permission_failed">权限申请失败</string>
    <string name="permission_message_permission_failed">我们需要的一些权限被您拒绝或者系统发生错误申请失败，请您到设置页面手动授权，否则功能无法正常使用！</string>

    <string name="permission_resume">继续</string>
    <string name="permission_title_permission_rationale">权限已被拒绝</string>
    <string name="permission_message_permission_rationale">您已经拒绝过我们申请授权，请您同意授权，否则功能无法正常使用！</string>

    <string name="today_focus">热点</string>
    <string name="more">更多</string>

    <string name="category">分类</string>
    <string name="news">资讯</string>
    <string name="video_category">视频分类</string>
    <string name="mumu_sole">木木独家</string>
    <string name="commentary">解说</string>
    <string name="killer">高手</string>
    <string name="matches">比赛</string>
    <string name="columns">栏目</string>

    <!-- 比赛 -->
    <string name="all_videos">全部视频</string>
    <string name="filter">筛选</string>

    <string name="me">我的</string>
    <string name="my_favorites">我的收藏</string>
    <string name="my_download">我的下载</string>
    <string name="fighting_capacity">战斗力</string>
    <string name="hidden_points">隐藏分</string>
    <string name="record_query">战绩查询</string>
    <string name="old_almanac">老黄历</string>
    <string name="compare">看看谁更强</string>
    <string name="heroic_restraint">英雄克制</string>
    <string name="version_update">版本更新</string>
    <string name="cache_clean">缓存清理</string>
    <string name="app_wall">应用推荐</string>
    <string name="about">关于</string>
</resources>
